# fathom

./: .gitignore  CMakeLists.txt  README.md
docs/: FATHOM_EXPLAINED.md  INVESTIGATION.md
python/: impact_direction_classifier.txt  requirements.txt  train_impact_model.py
src/: config.cpp  config.hpp  impact_logger.cpp  impact_logger.hpp  lobster_parser.cpp  lobster_parser.hpp  main.cpp  metrics.cpp  metrics.hpp  order_book.cpp  order_book.hpp  replay.cpp  replay.hpp  strategy.hpp
src/strategies/: naive_instant_fill_strategy.hpp  passive_quote_strategy.hpp
tests/: test_impact_logger.cpp  test_lobster_parser.cpp  test_metrics.cpp  test_naive_strategy.cpp  test_order_book.cpp
